<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroFragment"
    android:background="@drawable/splash_gradient_bg">

    <ImageView
        android:id="@+id/ImageBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/image_login_bg"
        android:scaleType="centerCrop"
        android:alpha="1"
        />

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="84dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/login_promo_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textFontWeight="700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo" />

    <LinearLayout
        android:id="@+id/ButtonGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginLeft="@dimen/big_gap"
        android:layout_marginRight="@dimen/big_gap"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/RegisterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_register_btn"
            android:background="@drawable/button_shape_rounder_white"
            android:insetTop="0dp"
            android:insetBottom="0dp"

            app:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_bold"
            android:textFontWeight="700"
            android:textSize="16sp"
            android:layout_marginBottom="@dimen/min_gap"
            android:textAllCaps="false"
            android:letterSpacing="0"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_login_btn"
            android:background="@drawable/button_shape_rounder_white"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:backgroundTint="@color/white_alpha_20"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_bold"
            android:textFontWeight="700"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:letterSpacing="0"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>