...
            app:chipTextColor="@color/white"
            app:chipTextSize="14sp"
            app:chipVerticalGap="@dimen/min_gap"
            app:chipVerticalPadding="3.5dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/PlaceholderBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape_rounder_white"
            android:fontFamily="@font/inter_bold"
            android:insetTop="0dp"
            android:insetBottom="0dp"
...
