...
            android:textSize="16sp"
            android:layout_marginBottom="@dimen/min_gap"
            android:textAllCaps="false"
            android:letterSpacing="0"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/BackBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="364dp"
            android:text="@string/button_back_action"
            android:background="@drawable/button_shape_rounder_white"
            android:insetTop="0dp"
...
